--- a/styles2.css
+++ b/styles2.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://cdn.pixabay.com/photo/2020/04/19/08/17/watercolor-5062356_1280.jpg");
+  background-image: url(https://cdn.pixabay.com/photo/2020/04/19/08/17/watercolor-5062356_1280.jpg);
 
 }
 h1 {
