--- a/styles2.css
+++ b/styles2.css
@@ -7,7 +7,8 @@ h1 {
   color:white;
   text-align:center;
   font-size:25px;
-  border-radius: 15px 15px 100px 100px
+  border-style:groove;
+  border-radius: 15px 15px 100px 100px;
 }
 h2 {
   color:white;
