--- a/styles2.css
+++ b/styles2.css
@@ -14,6 +14,8 @@ h2 {
   color:white;
   text-align:center;
   font-size:20px;
+  border-style: groove;
+  border-radius: 15px;
 }
 P {
   font-family: verdana;
