--- a/styles2.css
+++ b/styles2.css
@@ -22,7 +22,7 @@ p {
   font-family: verdana;
   font-size: 12px;
   color: black;
-  background-color: gray;
+  background-color: lightgray;
   border-radius: 20px;
   border-style: solid;
   padding: 15px;
