--- a/styles2.css
+++ b/styles2.css
@@ -10,7 +10,7 @@ h1 {
   font-size:25px;
   border-style:groove;
   border-radius: 15px 15px 100px 100px;
-  margin:auto;
+  margin:15px;
 }
 h2 {
   color:white;
@@ -18,15 +18,15 @@ h2 {
   font-size:20px;
   border-style:groove;
   border-radius:15px;
-  margin:auto;
+  margin:20px;
 }
 p {
   font-family: verdana;
   font-size: 12px;
   color: black;
-  background-color: lightgray;
+  background-color: white;
   border-radius: 30px;
   border-style: solid;
   padding: 15px;
-  margin:20px;
+  margin:25px;
 }
