--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,32 @@
 body {
-  background-color: gray;
+  background-image: url(https://cdn.pixabay.com/photo/2020/04/19/08/17/watercolor-5062356_1280.jpg);
+  background-color: skyblue;
+ 
+
 }
 h1 {
   color:white;
   text-align:center;
   font-size:25px;
+  border-style:groove;
+  border-radius: 15px 15px 100px 100px;
+  margin:15px;
 }
-P {
+h2 {
+  color:white;
+  text-align:center;
+  font-size:20px;
+  border-style:groove;
+  border-radius:15px;
+  margin:20px;
+}
+p {
   font-family: verdana;
   font-size: 12px;
-  color: green;
+  color: black;
+  background-color: white;
+  border-radius: 30px;
+  border-style: solid;
+  padding: 15px;
+  margin:25px;
 }
