--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 body {
   background-image: url(https://cdn.pixabay.com/photo/2020/04/19/08/17/watercolor-5062356_1280.jpg);
   background-color: skyblue;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}  
  
 
 }
