--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,14 @@ body {
   background-color: blue;
 }
 
+#nav {
+  background-color: white;
+}
+
+#section {
+  background-color: white;
+}
+
 h1 {
   color:white;
   text-align:center;
