--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,12 @@ body {
 
 #section {
   background-color: beige;
-  text-color: black;
+  color: black;
 }
 
 #section2 {
   background-color:beige;
-  text-color: blue;
+  color: blue;
 }
 
 #footer {
