--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,13 @@ body {
   text-align:center;
   font-size:30px;
   clear:both;
+  font-family: verdana;
+  color: black;
+  background-color: white;
+  border-radius: 30px;
+  border-style: solid;
+  padding: 15px;
+  margin:25px;
 }
 
 h1 {
@@ -48,8 +55,6 @@ p {
   font-size: 12px;
   color: black;
   background-color: white;
-  border-radius: 30px;
-  border-style: solid;
   padding: 15px;
   margin:25px;
 }
