--- a/styles.css
+++ b/styles.css
@@ -38,10 +38,10 @@ h1 {
   color:white;
   text-align:center;
   font-size:25px;
-  border-style:groove;
+  border-style:dashed;
   border-radius: 15px 15px 100px 100px;
   margin:15px;
-  padding: 10px;
+  padding: 20px;
 }
 h2 {
   color:black;
@@ -57,6 +57,6 @@ p {
   font-size: 12px;
   color: black;
   background-color: white;
-  padding: 15px;
-  margin:25px;
+  padding: 10px;
+  margin: 5px;
 }
