--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,11 @@ header {
 }
 
 
-section {
+#section {
   background-color: blue;
 }
 
-section2 {
+#section2 {
   background-color: steelblue;
 }
 
