--- a/hs.css
+++ b/hs.css
@@ -15,3 +15,16 @@
 	text-align:center;
 
 }
+
+footer {
+  text-align:center;
+  font-size:10px;
+  clear:both;
+  font-family: verdana;
+  color: black;
+  background-color: white;
+  border-style: solid;
+  padding: 1px;
+  margin:5px;
+  
+}
