--- a/hs.css
+++ b/hs.css
@@ -11,9 +11,15 @@
  
 }
 
-.nav-item {
+.nav {
 	text-align:center;
+}
 
+.nav :not(:first-child) {
+    border-left: 1px solid black;
+    margin-left: 17px ;
+    padding-left: 17px ;
+  
 }
 
 footer {
