--- a/hs.css
+++ b/hs.css
@@ -13,7 +13,6 @@
 #nav {
    float:left;
    width:100%;
-   background:#fff;
    border-bottom:4px solid #000;
    overflow:hidden;
    position:relative;
@@ -41,19 +40,17 @@
    display:block;
    margin:0 0 0 1px;
    padding:3px 10px;
-   background:#ddd;
-   color:#000;
    text-decoration:none;
    line-height:1.3em;
 }
 #nav ul li a:hover {
-   background:#369;
-   color:#fff;
+   background: red;
+   ;
 }
 #nav ul li a.active,
 #nav ul li a.active:hover {
-   color:#fff;
-   background:#000;
+   color:green
+   background:yellow;
    font-weight:bold;
 }
 
