--- a/hs.css
+++ b/hs.css
@@ -44,12 +44,13 @@
 }
 #nav ul li a {
    display:block;
-   margin:0 0 0 1px;
+   margin: 1px;
    padding:3px 10px;
    text-decoration:none;
    line-height:1.3em;
-	text-color:yellow;
+   color:black;
 }
+
 #nav ul li a:hover {
    background: lightgray;
    ;
