--- a/hs.css
+++ b/hs.css
@@ -73,7 +73,7 @@ footer {
   font-family: verdana;
   color: black;
   background-color: white;
-  border-style: solid;
+  border-top: 1px solid black;
   padding: 10px;
   margin:15px;
   
