--- a/hs.css
+++ b/hs.css
@@ -8,6 +8,7 @@
   text-align:center;
   padding: 30px;
   font-size:20px;
+  font-family: verdana;
  
 }
 #nav {
@@ -22,7 +23,7 @@
 }
 
 #nav ul {
-   clear:left;
+   clear:both;
    float:left;
    list-style:none;
    margin:0;
