--- a/hs.css
+++ b/hs.css
@@ -20,13 +20,15 @@ body {
 }
 #nav {
    float:left;
-   width:100%;
+   width: 90%;
+  margin-left: auto;
+  margin-right: auto;
    overflow:hidden;
    position:relative;
   clear:both;
     padding: 20px;
     margin: 20px;
-    background-color:linen;
+    background-color:skyblue;
 }
 
 #nav ul {
