--- a/hs.css
+++ b/hs.css
@@ -20,7 +20,7 @@ body {
 }
 #nav {
    float:left;
-   width: 90%;
+   width: 100%;
   margin-left: auto;
   margin-right: auto;
    overflow:hidden;
@@ -28,7 +28,7 @@ body {
   clear:both;
     padding: 20px;
     margin: 20px;
-    background-color:skyblue;
+    background-color:red;
 }
 
 #nav ul {
