--- a/hs.css
+++ b/hs.css
@@ -29,7 +29,7 @@ body {
   clear:both;
     padding: 20px;
     margin: 20px;
-    background-color:red;
+    background-color:linen;
 }
 
 #nav ul {
