--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,15 @@ header {
   height: 100px;  
   }
 
-  
+.koirat {
+  background-color: blue;
+  color:red;
+}
+
+  .kauppalista {
+    background-color: steelblue;
+}
+
   
 #section {
   background-color: blue;
@@ -61,14 +69,13 @@ h1 {
 }
 
 h2 {
-  color:black;
+  color:white;
   text-align:center;
   font-size:20px;
   border-style:groove;
   border-radius:15px;
   margin: 7px;
   padding: 10px;
-  text-color: white;
 }
 
 p {
