--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
   
  .myDiv {
   border: 2px dotted yellow;
-  width: 30%px;
+  width: 30%;
   float:right;
   padding: 5px;
   margin: 5px;
