--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   padding: 30px;
   margin: 10px;
   text-align: center;
-  text-color:white;
+  color:white;
   text-align:center;
   font-size:25px;
   border-style:dashed;
