--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,42 @@ body {
   padding: 5px;
 }
 
-.nav {
-  margin: 5px;
-}
   
+ .nav {
+  float: left;
+  width: 18%;
+  background-color: snow;
+  padding: 10px;
+  border: solid;
+  margin: 1px;
+  text-align:center;
+  height: 200px;
+  }
+  
+ nav ul {
+  list-style-type: none;
+  padding: 0;
+  }
+  
+ a:hover {
+  color:red;
+  }
+  
+ section {
+  float: left;
+  width: 79%;
+  background-color: white;
+  padding: 10px;
+  border: solid;
+  margin:1px;
+  }
+  
+ 
+  
+
+  
+
+
  .myDiv {
   border: 2px dotted yellow;
   width: 20%;
