--- a/hs.css
+++ b/hs.css
@@ -9,7 +9,10 @@ figure {
         border: none;
         padding: 5px;
         margin: 10px;
-        text-align:center;
+	display: block;
+  	margin-left: auto;
+  	margin-right: auto;
+  	width: 50%;
       }
 
 #container {
