--- a/hs.css
+++ b/hs.css
@@ -9,6 +9,7 @@ body {
         border: none;
         padding: 5px;
         margin: 10px;
+        text-align:center;
       }
 
 .keskitettykuva {
