--- a/hs.css
+++ b/hs.css
@@ -14,10 +14,14 @@ body {
 }
 .kuvaoikealla {
 	float: right;
+	width: 70 px;
+	height: 70px;
 }
 
 .kuvavasemmalla {
 	float: left;
+	width: 70 px;
+	height: 70px;
 }
 
 #container {
