--- a/hs.css
+++ b/hs.css
@@ -37,11 +37,13 @@ p {
 	
 
 .row {
-  background-color: linen;
+  background-color: red;
   color:black;
   clear:both;
   margin: 10px;
   padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
