--- a/hs.css
+++ b/hs.css
@@ -30,6 +30,13 @@ p {
 	margin: 15 px;
 }
 
+.yhteystiedot {
+	float: right;
+	width: 15%;
+	padding: 10 px;
+	margin: 15 px;
+}
+
 .container {
 	padding: 10px;
 	margin: 10px;
