--- a/hs.css
+++ b/hs.css
@@ -40,18 +40,20 @@ p {
 .container {
 	padding: 10px;
 	margin: 10px;
+	clear:both;
+	margin-left:auto;
+	margin-right:auto;
+	width: 100%;
 	}
 	
 
 .row {
-  background-color: blue;
+  background-color: lightblue;
   color:black;
   clear:both;
   margin: 10px;
   padding: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  width:100%;
+  
 }
 
 
