--- a/hs.css
+++ b/hs.css
@@ -42,6 +42,7 @@ p {
 	margin-left:auto;
 	margin-right:auto;
 	width: 100%;
+    	padding: 15px;
 	}
 	
 
@@ -51,7 +52,8 @@ p {
   clear:both;
   margin-left:auto;
   margin-right:auto;
-  width: 100%;
+  width: 80%;
+  padding:15px;
   
 }
 
