--- a/hs.css
+++ b/hs.css
@@ -32,9 +32,8 @@ p {
 
 .yhteystiedot {
 	float: right;
-	width: 100%;
-	padding: 10 px;
-	margin: 15 px;
+	width: 20%;
+	margin: auto;
 }
 
 .container {
@@ -52,7 +51,7 @@ p {
   clear:both;
   margin-left:auto;
   margin-right:auto;
-  width: 80%;
+  width: 100%;
   padding:15px;
   
 }
