--- a/styletable.css
+++ b/styletable.css
@@ -1,3 +1,9 @@
+body {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color:linen;
+} 
 
 table, th, td {
   border: 1px solid black;
