--- a/advanced_style.css
+++ b/advanced_style.css
@@ -7,3 +7,11 @@
 #teksti {
   text-shadow: 2px 2px #0022ff;
 }
+
+#tausta {
+  border: 2px solid black;
+  padding: 25px;
+  background: IMG_5523.jpg;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
