--- a/advanced_style.css
+++ b/advanced_style.css
@@ -11,7 +11,7 @@
 #tausta {
   border: 2px solid black;
   padding: 25px;
-  background: url (IMG_5523.jpg);
+  background: url (http://www.hyvinvoivasina.fi/attachments/Image/15823753655_2a1ec25aef_o.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
