--- a/advanced_style.css
+++ b/advanced_style.css
@@ -11,7 +11,7 @@
 #tausta {
   border: 2px solid black;
   padding: 25px;
-  background: url(IMG_5523.jpg);
+  background: url(https://cdn.pixabay.com/photo/2015/03/26/10/46/volcanoes-691939_1280.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
